using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace AdapterV2
{
    interface IBubblegum
    {
        void AssignCaptain();
    }
}
